--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,9 @@
 
   <section id="headerPlaceholder"></section>
   <main>
-  <div class="notificationPopup"><p></p></div>
+    <div class="notificationWrapper">
+      <div class="notificationPopup"><p></p></div>
+    </div>
     
 
     <section id="hero">
@@ -29,28 +31,28 @@
       <div id="categoryContainer">
         <article>
           <a id="electronics" href="products.html?class=electronics">
-            <div class="img-container"><img src="./images/electronics.jpg" alt="electronics"></div>
+            <div class="img-container"><img src="./images/electronics.webp" alt="electronics"></div>
             <h3>Electronics</h3>
             <p>Get the best deals on electronics</p>
           </a>
         </article>
         <article>
           <a id="fashion" href="products.html?class=fashion">
-            <div class="img-container"><img src="./images/fashion.avif" alt="fashion"></div>
+            <div class="img-container"><img src="./images/fashion.webp" alt="fashion"></div>
             <h3>Fashion</h3>
             <p>Get the best deals on fashion</p>
           </a>
         </article>
         <article>
           <a id="home-kitchen" href="products.html?class=home-kitchen">
-            <div class="img-container"><img src="./images/electronics.jpg" alt="electronics"></div>
+            <div class="img-container"><img src="./images/home&kitchen.webp" alt="electronics"></div>
             <h3>Home & Kitchen</h3>
             <p>Get the best deals on home decors & kitchen appliances</p>
           </a>
         </article>
         <article>
           <a id="beauty" href="products.html?class=beauty">
-            <div class="img-container"><img src="./images/electronic.jpg" alt="electronics"></div>
+            <div class="img-container"><img src="./images/beauty.webp" alt="electronics"></div>
             <h3>Beauty</h3>
             <p>Get the best deals on beauty products</p>
           </a>
