--- a/frontend/products.html
+++ b/frontend/products.html
@@ -11,6 +11,10 @@
 </head>
 
 <body>
+  <div class="notificationWrapper">
+    <div class="notificationPopup"><p></p></div>
+  </div>
+
   <section id="headerPlaceholder"></section>
   
   <section id="productList"></section>
