--- a/frontend/userRegistration.html
+++ b/frontend/userRegistration.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-  <div class="notificationPopup"><p></p></div>
+  <div class="notificationWrapper">
+    <div class="notificationPopup"><p></p></div>
+  </div>
   <div class="container" id="signinBlock">
     <div class="imageContainer">
       <img src="images/login.svg" alt="user">
