--- a/frontend/header.html
+++ b/frontend/header.html
@@ -22,7 +22,7 @@
 
     <nav>
       <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html#hero">Home</a></li>
         <li class="dropdown">
           <a href="products.html?class=allProduct" id="allProduct">Products</a>
           <ul class="dropdown-menu">
@@ -32,7 +32,7 @@
             <li><a id="beauty" href="products.html?class=beauty">Beauty</a></li>
           </ul>
         </li>
-        <li><a href="#contact">Contact Us</a></li>
+        <li><a href="index.html#contact">Contact Us</a></li>
         <li>
           <div class="signin-dropdown">
             <a href="userRegistration.html?class=login">Login</a>
@@ -57,7 +57,9 @@
   <section class="popup" id="cartPopup"><button id="cartExitBtn" class="exitBtns"><i class="fa-solid fa-xmark"></i></button></section>
   <section class="popup" id="wishlistPopup"><button id="wishlistExitBtn" class="exitBtns"><i class="fa-solid fa-xmark"></i></button></section>
 
-  <div class="notificationPopup"><p></p></div>
+  <div class="notificationWrapper">
+    <div class="notificationPopup"><p></p></div>
+  </div>
 
   <script defer type="module" src="js_files/common.js"></script>
 </body>
