--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="css_files/common.css">
-  <link rel="stylesheet" href="css_files/index.css">
+  <link rel="stylesheet" href="css_files/styles.min.css">
 </head>
 
 <body>
@@ -114,8 +113,8 @@
 
   <section id="footerPlaceholder"></section>
 
-  <script defer type="module" src="js_files/common.js"></script>
-  <script defer type="module" src="js_files/index.js"></script>
+  <script defer type="module" src="dist/common.bundle.js"></script>
+  <script defer type="module" src="dist/index.bundle.js"></script>
 
 </body>
 
