fix cart's responsiveness

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
   <title>SmartCart</title>
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   <link rel="stylesheet" href="css_files/styles.min.css">
+  <!-- <link rel="stylesheet" href="css_files/index.css"> -->
 </head>
 
 <body>
@@ -114,6 +115,8 @@
 
   <section id="footerPlaceholder"></section>
 
+  <!-- <script defer type="module" src="js_files/common.js"></script>
+  <script defer type="module" src="js_files/index.js"></script> -->
   <script defer type="module" src="dist/common.bundle.js"></script>
   <script defer type="module" src="dist/index.bundle.js"></script>
 
