--- a/frontend/footer.html
+++ b/frontend/footer.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="./css_files/styles.min.css">
+  <!-- <link rel="stylesheet" href="css_files/common.css"> -->
 </head>
 <body>
   <footer>
@@ -31,6 +32,7 @@
     </div>
   </footer>
   
+  <!-- <script src="js_files/common.js" type="module" defer></script> -->
   <script src="dist/common.bundle.js" type="module" defer></script>
 </body>
 </html>
