--- a/frontend/header.html
+++ b/frontend/header.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SmartCart Header</title>
+  <!-- <link rel="stylesheet" href="css_files/common.css"> -->
   <link rel="stylesheet" href="./css_files/styles.min.css">
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
@@ -62,6 +63,7 @@
     <div class="notificationPopup"><p></p></div>
   </div>
 
+  <!-- <script defer type="module" src="js_files/common.js"></script> -->
   <script defer type="module" src="dist/common.bundle.js"></script>
 </body>
 
