--- a/frontend/products.html
+++ b/frontend/products.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+  <!-- <link rel="stylesheet" href="css_files/product.css"> -->
   <link rel="stylesheet" href="./css_files/styles.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   <title>Document</title>
@@ -22,6 +23,8 @@
   
   <section id="footerPlaceholder"></section>
 
+  <!-- <script defer type="module" src="js_files/common.js"></script>
+  <script defer type="module" src="js_files/products.js"></script> -->
   <script defer type="module" src="dist/common.bundle.js"></script>
   <script defer type="module" src="dist/products.bundle.js"></script>
 </body>
