--- a/frontend/userRegistration.html
+++ b/frontend/userRegistration.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <!-- <link rel="stylesheet" href="css_files/userRegistration.css"> -->
   <link rel="stylesheet" href="css_files/styles.min.css">
 </head>
 
@@ -66,6 +67,7 @@
 
 
 
+  <!-- <script defer type="module" src="js_files/userRegistration.js" defer></script> -->
   <script defer type="module" src="dist/userRegistration.bundle.js" defer></script>
 </body>
 
