--- a/frontend/footer.html
+++ b/frontend/footer.html
@@ -32,7 +32,7 @@
     </div>
   </footer>
   
-  <!-- <script src="js_files/common.js" type="module" defer></script> -->
-  <script src="dist/common.bundle.js" type="module" defer></script>
+  <script src="js_files/common.js" type="module" defer></script>
+  <!-- <script src="dist/common.bundle.js" type="module" defer></script> -->
 </body>
 </html>
