--- a/frontend/index.html
+++ b/frontend/index.html
@@ -115,10 +115,10 @@
 
   <section id="footerPlaceholder"></section>
 
-  <!-- <script defer type="module" src="js_files/common.js"></script>
-  <script defer type="module" src="js_files/index.js"></script> -->
-  <script defer type="module" src="dist/common.bundle.js"></script>
-  <script defer type="module" src="dist/index.bundle.js"></script>
+  <script defer type="module" src="js_files/common.js"></script>
+  <script defer type="module" src="js_files/index.js"></script>
+  <!-- <script defer type="module" src="dist/common.bundle.js"></script>
+  <script defer type="module" src="dist/index.bundle.js"></script> -->
 
 </body>
 
