--- a/frontend/userRegistration.html
+++ b/frontend/userRegistration.html
@@ -67,8 +67,8 @@
 
 
 
-  <!-- <script defer type="module" src="js_files/userRegistration.js" defer></script> -->
-  <script defer type="module" src="dist/userRegistration.bundle.js" defer></script>
+  <script defer type="module" src="js_files/userRegistration.js" defer></script>
+  <!-- <script defer type="module" src="dist/userRegistration.bundle.js" defer></script> -->
 </body>
 
 </html>
